--- a/views/delete.html
+++ b/views/delete.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form methode="DELETE"  action="/delete">
+    <form   action="/delete">
         <input type ="number" name="id" placeholder="enter id"/><br><br>
         <input type ="text" name="gender" placeholder="enter gender"/><br><br>
         <input type ="text" name="name" placeholder="enter name"/><br><br>
